--- a/luaInCpp2/luaInCpp.cbp
+++ b/luaInCpp2/luaInCpp.cbp
@@ -13,11 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="../lua/include" />
+					<Add directory="../lib/lua/include" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
-					<Add library="../lua/liblua53.a" />
+					<Add library="../lib/lua/liblua53.a" />
 				</Linker>
 			</Target>
 			<Target title="Release">
