--- a/sfml1/sfml1.cbp
+++ b/sfml1/sfml1.cbp
@@ -13,11 +13,13 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="../lib/sfml/include" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics-d" />
 					<Add library="sfml-window-d" />
 					<Add library="sfml-system-d" />
+					<Add directory="../lib/sfml/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -27,12 +29,14 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="../lib/sfml/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 					<Add library="sfml-graphics" />
 					<Add library="sfml-window" />
 					<Add library="sfml-system" />
+					<Add directory="../lib/sfml/lib" />
 				</Linker>
 			</Target>
 		</Build>
