added -static-libgcc linker flag

--- a/sfml1/sfml1.cbp
+++ b/sfml1/sfml1.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-static-libgcc" />
 					<Add directory="../lib/sfml/include" />
 				</Compiler>
 				<Linker>
