--- a/sfml1/sfml1.cbp
+++ b/sfml1/sfml1.cbp
@@ -15,6 +15,7 @@
 					<Add option="-g" />
 					<Add option="-static-libgcc" />
 					<Add directory="../lib/sfml/include" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics-d" />
@@ -31,6 +32,7 @@
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="../lib/sfml/include" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -53,8 +55,9 @@
 			<Add library="dxguid" />
 			<Add directory="G:/+ 00 + Projects/C++/FinalYearProject/lib/sfml/lib" />
 		</Linker>
-		<Unit filename="cb.bmp" />
+		<Unit filename="include/Sprite.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Sprite.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
