--- a/sfml2/sfml1.cbp
+++ b/sfml2/sfml1.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="sfml1" />
+		<Option title="sfml2" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/sfml1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/sfml2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -56,8 +56,10 @@
 			<Add directory="G:/+ 00 + Projects/C++/FinalYearProject/lib/sfml/lib" />
 		</Linker>
 		<Unit filename="include/Drawable.h" />
+		<Unit filename="include/ResourceManager.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Drawable.cpp" />
+		<Unit filename="src/ResourceManager.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
