Got Lua interacting with a C++ class
C++ and Lua can share the same object if C++ takes a pointer from the global vector, if we want to implement any threading we will have to think about how this will work

--- a/combined1/sfml1.cbp
+++ b/combined1/sfml1.cbp
@@ -70,6 +70,7 @@
 		<Unit filename="src/Drawable.cpp" />
 		<Unit filename="src/Global.cpp" />
 		<Unit filename="src/InputManager.cpp" />
+		<Unit filename="src/L_Drawable.cpp" />
 		<Unit filename="src/LuaState.cpp" />
 		<Unit filename="src/Point.cpp" />
 		<Unit filename="src/Resource.cpp" />
