--- a/combined1/sfml1.cbp
+++ b/combined1/sfml1.cbp
@@ -64,13 +64,13 @@
 		<Unit filename="include/Global.h" />
 		<Unit filename="include/InputManager.h" />
 		<Unit filename="include/LuaState.h" />
+		<Unit filename="include/Lua/L_Drawable.h" />
 		<Unit filename="include/Resource.h" />
 		<Unit filename="include/ResourceManager.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Drawable.cpp" />
 		<Unit filename="src/Global.cpp" />
 		<Unit filename="src/InputManager.cpp" />
-		<Unit filename="src/L_Drawable.cpp" />
 		<Unit filename="src/LuaState.cpp" />
 		<Unit filename="src/Point.cpp" />
 		<Unit filename="src/Resource.cpp" />
