--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ Report/document.aux
 Report/document.log
 Report/document.synctex.gz
 Report/document.pdf
+Report/document.fls
+Report/document.fdb_latexmk
+Report/document.blg
+Report/document.run.xml
+Report/document.bcf
+Report/document.bbl
+Report/document-blx.bib
