--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 *.exe
-*/bin/
-*/obj/
+*
+/bin/
+*
+/obj/
+
 /lib/sfml
+
 Report/document.aux
+
 Report/document.log
+
 Report/document.synctex.gz
-Report/document.pdf
 Report/document.fls
 Report/document.fdb_latexmk
 Report/document.blg
