--- a/source/project.cbp
+++ b/source/project.cbp
@@ -22,6 +22,7 @@
 					<Add library="sfml-graphics-d" />
 					<Add library="sfml-window-d" />
 					<Add library="sfml-system-d" />
+					<Add library="sfml-audio-d" />
 					<Add directory="../lib/sfml/lib" />
 				</Linker>
 			</Target>
@@ -41,6 +42,7 @@
 					<Add library="sfml-graphics" />
 					<Add library="sfml-window" />
 					<Add library="sfml-system" />
+					<Add library="sfml-audio" />
 					<Add directory="../lib/sfml/lib" />
 				</Linker>
 			</Target>
