--- a/source/project.cbp
+++ b/source/project.cbp
@@ -69,6 +69,7 @@
 		<Unit filename="include/Global.h" />
 		<Unit filename="include/InputManager.h" />
 		<Unit filename="include/LuaState.h" />
+		<Unit filename="include/Lua/L_Animation.h" />
 		<Unit filename="include/Lua/L_Drawable.h" />
 		<Unit filename="include/Lua/L_Input.h" />
 		<Unit filename="include/Lua/L_Sound.h" />
