--- a/source/project.cbp
+++ b/source/project.cbp
@@ -62,6 +62,12 @@
 			<Add directory="G:/+ 00 + Projects/C++/FinalYearProject/lib/sfml/lib" />
 		</Linker>
 		<Unit filename="include/Animation.h" />
+		<Unit filename="include/Components/Component.h" />
+		<Unit filename="include/Components/DrawableComponent.h" />
+		<Unit filename="include/Components/Entity.h" />
+		<Unit filename="include/Components/PositionComponent.h" />
+		<Unit filename="include/Components/VelocityComponent.h" />
+		<Unit filename="include/ECSManager.h" />
 		<Unit filename="include/Entity/Animatable.h" />
 		<Unit filename="include/Entity/Drawable.h" />
 		<Unit filename="include/Entity/Point.h" />
@@ -78,13 +84,18 @@
 		<Unit filename="include/Lua/L_Input.h" />
 		<Unit filename="include/Lua/L_SF_View.h" />
 		<Unit filename="include/Lua/L_Sound.h" />
+		<Unit filename="include/Lua/L_Window.h" />
 		<Unit filename="include/Resource.h" />
 		<Unit filename="include/ResourceInterface.h" />
 		<Unit filename="include/ResourceManager.h" />
+		<Unit filename="include/StringsToKeys.h" />
+		<Unit filename="include/Systems/DrawableSystem.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Animatable.cpp" />
 		<Unit filename="src/Animation.cpp" />
+		<Unit filename="src/Components/DrawableComponent.cpp" />
 		<Unit filename="src/Drawable.cpp" />
+		<Unit filename="src/ECSManager.cpp" />
 		<Unit filename="src/Gamestate.cpp" />
 		<Unit filename="src/GamestateManager.cpp" />
 		<Unit filename="src/Global.cpp" />
