--- a/source/.vscode/tasks.json
+++ b/source/.vscode/tasks.json
@@ -69,6 +69,15 @@
                 "kind": "build",
                 "isDefault": true
             }
-        },     
+        },
+        {
+            "label": "run",
+            "type": "shell",
+            "command": "./game",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },       
     ]
 }
