worked on improvement of b2d integration

--- a/source/project.cbp
+++ b/source/project.cbp
@@ -88,6 +88,7 @@
 		<Unit filename="include/ResourceManager.h" />
 		<Unit filename="include/StringsToKeys.h" />
 		<Unit filename="include/Systems/DrawableSystem.h" />
+		<Unit filename="include/Systems/PhysicsSystem.h" />
 		<Unit filename="lib/windows/box2d/Box2D/Box2D/Box2D.h" />
 		<Unit filename="lib/windows/box2d/Box2D/Box2D/Collision/Shapes/b2ChainShape.cpp" />
 		<Unit filename="lib/windows/box2d/Box2D/Box2D/Collision/Shapes/b2ChainShape.h" />
