split the eval and design apart and added some to both

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,19 @@ Report/Design Statement.toc
 *.~vsdx
 *.o
 source/game
+Report/Evaluation-blx.bib
+Report/Evaluation.aux
+Report/Evaluation.bbl
+Report/Evaluation.blg
+Report/Evaluation.fdb_latexmk
+Report/Evaluation.fls
+Report/Evaluation.log
+Report/Evaluation.run.xml
+Report/Evaluation.synctex.gz
+Report/pdflatex13672.fls
+Report/pdflatex14552.fls
+Report/pdflatex15644.fls
+Report/pdflatex2016.fls
+Report/pdflatex3756.fls
+Report/pdflatex3964.fls
+Report/pdflatex8820.fls
