--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,7 @@
-// cSpell Settings
 {
-    // Version of the setting file.  Always 0.1
-    "version": "0.1",
-    // language - current active spelling language
-    "language": "en",
-    // words - list of words to be always considered correct
-    "words": [
+    "cSpell.words": [
+        "physbox",
+        "spritesheet",
         "aboveskip",
         "apps",
         "backgroundcolor",
@@ -43,11 +39,5 @@
         "Tecgraf",
         "upquote",
         "workflow"
-    ],
-    // flagWords - list of words to be always considered incorrect
-    // This is useful for offensive words and common spelling errors.
-    // For example "hte" should be "the"
-    "flagWords": [
-        "hte"
     ]
 }
